@@ -58,7 +58,7 @@ ToDo
 
 """
 
-__version__ = '1.4.3.dev5'
+__version__ = '1.4.3.dev6'
 
 import sys
 import os
